<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".activities.CreateQrCodeActivity">

    <ScrollView
        android:id="@+id/create_qr_form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/create_qr_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCreateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_a_qubcoin_qr_code"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/qr_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_qr_value"
                    android:inputType="numberDecimal"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/qr_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_qr_reason"
                    android:inputType="textMultiLine"
                    android:maxLength="250"
                    android:minLines="1"
                    android:maxLines="5"
                    android:singleLine="false"
                    android:gravity="start"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_qr_button"
                android:theme="@style/AppTheme.Button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_create_qr"
                android:textStyle="bold"
                android:onClick="onClickCreateQr"/>

            <Button
                android:id="@+id/cancel_creation_button"
                android:theme="@style/AppTheme.Button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_cancel"
                android:textStyle="bold"
                android:onClick="onClickCancel"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>